<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_btn">C</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="plus_and_minus">+/-</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="parenthesis">( )</string>
    <string name="dot">.</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="nine">9</string>
    <string name="percentage">%</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
</resources>