<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/calc_edt_formula"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_150"
        android:layout_margin="@dimen/space_16"
        android:background="@null"
        android:enabled="true"
        android:focusable="true"
        android:gravity="end|bottom"
        android:longClickable="true"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="@dimen/size_40"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_75"
        android:layout_margin="@dimen/space_16"
        android:textColor="@color/white"
        android:textSize="@dimen/size_25"
        app:layout_constraintEnd_toEndOf="@+id/calc_edt_formula"
        app:layout_constraintStart_toStartOf="@+id/calc_edt_formula"
        app:layout_constraintTop_toBottomOf="@+id/calc_edt_formula" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_history"
        android:layout_width="@dimen/space_25"
        android:layout_height="@dimen/space_25"
        android:layout_marginStart="@dimen/space_50"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/history_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_tv_result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_converter"
        android:layout_width="@dimen/space_25"
        android:layout_height="@dimen/space_25"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/converter_icon"
        app:layout_constraintStart_toEndOf="@id/calc_btn_history"
        app:layout_constraintTop_toBottomOf="@id/calc_tv_result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_rotation"
        android:layout_width="@dimen/space_25"
        android:layout_height="@dimen/space_25"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/superscript_icon"
        app:layout_constraintStart_toEndOf="@id/calc_btn_converter"
        app:layout_constraintTop_toBottomOf="@id/calc_tv_result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_delete"
        android:layout_width="@dimen/space_25"
        android:layout_height="@dimen/space_25"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_50"
        android:background="@drawable/backspace_icon"
        android:onClick="clickDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_tv_result" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_clear"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_35"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickClear"
        android:text="@string/clear_btn"
        android:textColor="@color/orange_color"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_7"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_7"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_35"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickSeven"
        android:text="@string/seven"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_4"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_4"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_35"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickFour"
        android:text="@string/four"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_1"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_35"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickOne"
        android:text="@string/one"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_plus_minus"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_plus_minus"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_35"
        android:layout_marginBottom="@dimen/space_10"
        android:background="@drawable/button_background_dark"
        android:onClick="clickPlusMinus"
        android:text="@string/plus_and_minus"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_parenthesis"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickParenthesis"
        android:text="@string/parenthesis"
        android:textColor="@color/color_green"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_8"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_clear" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_8"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickEight"
        android:text="@string/eight"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_5"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_5"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickFive"
        android:text="@string/five"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_2"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_2"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickTwo"
        android:text="@string/two"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_0"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_0"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_10"
        android:background="@drawable/button_background_dark"
        android:onClick="clickZero"
        android:text="@string/zero"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_plus_minus" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_percentage"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:text="@string/percentage"
        android:textColor="@color/color_green"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_9"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_parenthesis" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_9"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickNine"
        android:text="@string/nine"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_6"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_6"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickSix"
        android:text="@string/six"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_3"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_3"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickThree"
        android:text="@string/three"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_dot"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_dot"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_10"
        android:background="@drawable/button_background_dark"
        android:onClick="clickDot"
        android:text="@string/dot"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_0" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_div"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickDiv"
        android:text="@string/div"
        android:textColor="@color/color_green"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_mul"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_percentage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_mul"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickMul"
        android:text="@string/mul"
        android:textColor="@color/color_green"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_sub"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_sub"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickSub"
        android:text="@string/sub"
        android:textColor="@color/color_green"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_add"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_add"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_16"
        android:background="@drawable/button_background_dark"
        android:onClick="clickAdd"
        android:text="@string/plus"
        android:textColor="@color/color_green"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_equal"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc_btn_equal"
        android:layout_width="@dimen/space_67"
        android:layout_height="@dimen/space_67"
        android:layout_marginStart="@dimen/space_22"
        android:layout_marginBottom="@dimen/space_10"
        android:background="@drawable/button_background_green"
        android:onClick="clickEqual"
        android:text="@string/equal"
        android:textColor="@color/number_color_white"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_dot" />


</androidx.constraintlayout.widget.ConstraintLayout>